# ImageWatchPro-for-VisualStudio

./: .gitignore  LICENSE  README.md  README.zh-CN.md  overview.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: docs-check.yml
docs/: faq.md  features.md  installation.md  release-notes-v0.1.0-preview.md  release-notes-v1.0.22.md  release-notes-v1.0.23.md  release-notes-v1.0.24.md  roadmap.md  usage.md
test-cpp/: CMakeLists.txt  README.md  main.cpp
